--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -19,5 +19,9 @@
         android:id="@+id/pokemonDetailFragment"
         android:name="com.example.pokemonotravezconfragmentos.ui.detail.PokemonDetailFragment"
         android:label="fragment_pokemon_detail"
-        tools:layout="@layout/fragment_pokemon_detail" />
+        tools:layout="@layout/fragment_pokemon_detail" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+    </fragment>
 </navigation>
